<resources>
    <string name="app_name">My Note Pad App</string>
    <string name="title">title</string>
    <string name="time">time</string>
    <string name="content">content</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="save">save</string>
    <string name="enter_title_here">enter title here</string>
    <string name="notes_file">NotesFile.json</string>
    <string name="my_note_app">My Note App</string>
    <string name="_2020_yu_qian">©2020, Yu Qian</string>
    <string name="version_1_0">Version 1.0</string>

</resources>